force button to be correct style on mobiles

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -106,10 +106,10 @@ body {
             }
             #mc-embedded-subscribe {
                 height: 42px;
-                background-color: $blue;
+                background-color: $blue !important;
                 font-weight: bold;
-                border-radius: 0;
-                font-family: $font-stack;
+                border-radius: 0 !important;
+                font-family: $font-stack !important;
                 transition: none;
                 transition: box-shadow 0.23s ease-in-out 0s;
 
@@ -122,7 +122,7 @@ body {
                     box-shadow: 0px 0px 0px 4px $yellow;
                 }
                 &:hover {
-                    background: rgba($blue, 0.8);
+                    background: rgba($blue, 0.8) !important;
                 }
             }
         }
